# metabase-cli

./: .gitignore  README.md  pyproject.toml
metabase_cli/: __init__.py  add_cards.py  api.py  archive.py  cleanup.py  cli.py  configure.py  database.py  duplicate_cards.py  env.py  export.py  setup_handi.py
scripts/: load-env.sh
